<resources>
    <string name="app_name">Intern Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cd_border">Border Item</string>
    <string name="user_icon">User Icon</string>
    <string name="company_icon">Company Icon</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec dolor a elit dapibus efficitur. Aliquam bibendum, arcu ac semper ullamcorper, est lectus finibus libero, nec commodo dui erat sollicitudin lorem. Nullam condimentum enim quam, eu pulvinar neque lobortis et. Quisque maximus condimentum odio, dapibus feugiat nisi ultrices a.</string>
    <string name="company_example">Company Name</string>
    <string name="user_name_example">User Name</string>
    <string name="post_title_example">Post Title</string>
    <string name="comment_example">Comments User Example</string>
    <string name="comment_author_example">Comment author name</string>
    <string name="comments">Comments</string>
</resources>