<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <ImageView
        android:layout_width="8dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_border"
        android:src="@color/green_kumparan" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_posts_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/post_title_example" />

        <ImageView
            android:id="@+id/img_users_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/user_icon"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toStartOf="@id/tv_posts_title"
            app:layout_constraintTop_toBottomOf="@id/tv_posts_title" />

        <TextView
            android:id="@+id/tv_users_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/grey_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/img_users_icon"
            app:layout_constraintStart_toEndOf="@id/img_users_icon"
            app:layout_constraintTop_toTopOf="@id/img_users_icon"
            tools:text="@string/user_name_example" />

        <ImageView
            android:id="@+id/img_company_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="16sp"
            android:contentDescription="@string/company_icon"
            android:src="@drawable/ic_round_company_24"
            app:layout_constraintStart_toEndOf="@id/tv_users_name"
            app:layout_constraintTop_toTopOf="@id/img_users_icon" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/grey_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/img_company_icon"
            app:layout_constraintStart_toEndOf="@id/img_company_icon"
            app:layout_constraintTop_toTopOf="@id/img_company_icon"
            tools:text="@string/company_example" />

        <TextView
            android:id="@+id/tv_posts_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_posts_title"
            app:layout_constraintStart_toStartOf="@id/tv_posts_title"
            app:layout_constraintTop_toBottomOf="@+id/img_users_icon"
            tools:text="@string/lorem_ipsum" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>