<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailPostFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/green_kumparan"
            android:elevation="4dp"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:title="@string/post_title_example" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_posts_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/post_title_example" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/grey_text"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_posts_title"
                app:layout_constraintStart_toStartOf="@id/tv_posts_title"
                app:layout_constraintTop_toBottomOf="@id/tv_posts_title"
                tools:text="@string/user_name_example" />

            <TextView
                android:id="@+id/tv_posts_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tv_posts_title"
                app:layout_constraintStart_toStartOf="@id/tv_posts_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                tools:text="@string/lorem_ipsum" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/decor_comment"
                android:layout_width="4dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:src="@color/red_kumparan"
                app:layout_constraintBottom_toBottomOf="@id/title_comments"
                app:layout_constraintStart_toStartOf="@id/tv_posts_title"
                app:layout_constraintTop_toBottomOf="@id/tv_posts_body" />

            <TextView
                android:id="@+id/title_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/tv_posts_title"
                app:layout_constraintStart_toEndOf="@id/decor_comment"
                app:layout_constraintTop_toTopOf="@id/decor_comment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="@id/tv_posts_title"
                app:layout_constraintStart_toStartOf="@id/title_comments"
                app:layout_constraintTop_toBottomOf="@id/title_comments"
                tools:listitem="@layout/item_comment" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>